--- a/音视频学习/001.音频.md
+++ b/音视频学习/001.音频.md
@@ -2,6 +2,17 @@
 
 主要是对音视频的基本知识进行记录学习.
 
+- [音频格式](#音频格式)
+  - [1 PCM(脉冲编码调制)](#1-pcm脉冲编码调制)
+    - [1.1 说明](#11-说明)
+  - [1.2 工作原理](#12-工作原理)
+  - [1.3 PCM数据格式](#13-pcm数据格式)
+    - [1.3.1 PCM数据的6个参数](#131-pcm数据的6个参数)
+    - [1.3.2 FFmpeg中提供的样本格式](#132-ffmpeg中提供的样本格式)
+    - [1.3.3 播放/分析PCM文件](#133-播放分析pcm文件)
+    - [1.3.4 PCM音频数据格式](#134-pcm音频数据格式)
+    - [1.3.5 FFmpeg支持的PCM数据格式](#135-ffmpeg支持的pcm数据格式)
+
 ## 1 PCM(脉冲编码调制)
 
 ### 1.1 说明
@@ -58,13 +69,13 @@
 ### 1.3.3 播放/分析PCM文件
 
 * `FFmpeg`工具包中的`ffplay`:
-```dos
+```bash
 // 样本格式为f32le, 单声道, 采样率为48000Hz的Pcm音频文件
 ffplay -f f32le -ac 1 -ar 48000 pcm_audio.pcm
 ```
 有的同学可能会疑惑f32le是什么? 这是ffmpeg支持的数据格式的一种, 只不过在调用api时木有, 使用`Terminal`的时候是可以传入的.
 
-`f32le`代表的就是`32-bit float-point little-endian`(32位浮点型 小端), 具体可以参考[这篇博客](https://www.jianshu.com/p/aa3b28262a7f)中关于样本格式的记录.
+`f32le`代表的就是`32-bit float-point little-endian`(32位浮点型 小端), 具体跳转至[1.3.5小节](#135-ffmpeg支持的pcm数据格式)
 
 * Audacity: 一款免费开源的跨平台音频处理软件, 非常好用!
 
@@ -72,4 +83,37 @@ ffplay -f f32le -ac 1 -ar 48000 pcm_audio.pcm
 
 如果是单声道的音频文件, 采样数据按时间的先后顺序依次存入(有时候也会采用`LRLRLRLR`方式存储, 只是了另一个声道的数据为0), 如果是双声道的花就按照`LRLRLRLR`的方式存储, 存储的时候与字节序有关. big-edian模式如下:
 
-![image](./images/001-01.webp)
+<div align=center>
+    <img src="./images/001-01.webp" />
+</div>
+
+### 1.3.5 FFmpeg支持的PCM数据格式
+
+使用`ffmpeg -formats`命令, 即可获取ffmpeg支持的音视频格式, 其中我们可以找到支持PCM的格式.
+
+```text
+ DE alaw            PCM A-law
+ DE f32be           PCM 32-bit floating-point big-endian
+ DE f32le           PCM 32-bit floating-point little-endian
+ DE f64be           PCM 64-bit floating-point big-endian
+ DE f64le           PCM 64-bit floating-point little-endian
+ DE mulaw           PCM mu-law
+ DE s16be           PCM signed 16-bit big-endian
+ DE s16le           PCM signed 16-bit little-endian
+ DE s24be           PCM signed 24-bit big-endian
+ DE s24le           PCM signed 24-bit little-endian
+ DE s32be           PCM signed 32-bit big-endian
+ DE s32le           PCM signed 32-bit little-endian
+ DE s8              PCM signed 8-bit
+ DE u16be           PCM unsigned 16-bit big-endian
+ DE u16le           PCM unsigned 16-bit little-endian
+ DE u24be           PCM unsigned 24-bit big-endian
+ DE u24le           PCM unsigned 24-bit little-endian
+ DE u32be           PCM unsigned 32-bit big-endian
+ DE u32le           PCM unsigned 32-bit little-endian
+ DE u8              PCM unsigned 8-bit
+ DE vidc            PCM Archimedes VIDC
+```
+
+> * s代表是有符号, u是无符号, f是浮点数 
+> * le是小端, be是大端
