--- a/音视频学习/001.音频.md
+++ b/音视频学习/001.音频.md
@@ -12,6 +12,13 @@
     - [1.3.3 播放/分析PCM文件](#133-播放分析pcm文件)
     - [1.3.4 PCM音频数据格式](#134-pcm音频数据格式)
     - [1.3.5 FFmpeg支持的PCM数据格式](#135-ffmpeg支持的pcm数据格式)
+    - [1.3.6 PCM音频的处理](#136-pcm音频的处理)
+      - [1.3.6.1 分离双声道PCM音频数据左右声道的数据](#1361-分离双声道pcm音频数据左右声道的数据)
+  - [2 AAC](#2-aac)
+    - [2.1 说明](#21-说明)
+      - [2.1.1 特点](#211-特点)
+      - [2.1.2 特性](#212-特性)
+    - [2.2 帧格式](#22-帧格式)
 
 ## 1 PCM(脉冲编码调制)
 
@@ -49,20 +56,20 @@
 
 | 序号 | 枚举               | 值  | 描述                           |
 | ---- | ------------------ | --- | ------------------------------ |
-| 1    | AV_SAMPLE_FMT_NONE | -1  | 无                             |
-| 2    | AV_SAMPLE_FMT_U8   |     | 单个采样点的为8位无符号整型    |
-| 3    | AV_SAMPLE_FMT_S16  |     | 单个采样点的为16位整型         |
-| 4    | AV_SAMPLE_FMT_S32  |     | 单个采样点的为32位整型         |
-| 5    | AV_SAMPLE_FMT_FLT  |     | 单个采样点的为32位浮点数       |
-| 6    | AV_SAMPLE_FMT_DBL  |     | 单个采样点的为64位双精度浮点数 |
-| 7    | AV_SAMPLE_FMT_U8P  |     | 单个采样点的为8位无符号整型    |
-| 8    | AV_SAMPLE_FMT_S16P |     | 单个采样点的为16位整型         |
-| 9    | AV_SAMPLE_FMT_S32P |     | 单个采样点的为32位整型         |
-| 10   | AV_SAMPLE_FMT_FLTP |     | 单个采样点的为32位浮点         |
-| 11   | AV_SAMPLE_FMT_DBLP |     | 单个采样点的为64位浮点         |
-| 12   | AV_SAMPLE_FMT_S64  |     | 单个采样点的为64位整型         |
-| 13   | AV_SAMPLE_FMT_S64P |     | 单个采样点的为64位整型         |
-| 14   | AV_SAMPLE_FMT_NB   |     |                                |
+| 1    | `AV_SAMPLE_FMT_NONE` | -1  | 无                             |
+| 2    | `AV_SAMPLE_FMT_U8 `  |     | 单个采样点的为8位无符号整型    |
+| 3    | `AV_SAMPLE_FMT_S16`  |     | 单个采样点的为16位整型         |
+| 4    | `AV_SAMPLE_FMT_S32`  |     | 单个采样点的为32位整型         |
+| 5    | `AV_SAMPLE_FMT_FLT`  |     | 单个采样点的为32位浮点数       |
+| 6    | `AV_SAMPLE_FMT_DBL`  |     | 单个采样点的为64位双精度浮点数 |
+| 7    | `AV_SAMPLE_FMT_U8P`  |     | 单个采样点的为8位无符号整型    |
+| 8    | `AV_SAMPLE_FMT_S16P` |     | 单个采样点的为16位整型         |
+| 9    | `AV_SAMPLE_FMT_S32P` |     | 单个采样点的为32位整型         |
+| 10   | `AV_SAMPLE_FMT_FLTP` |     | 单个采样点的为32位浮点         |
+| 11   | `AV_SAMPLE_FMT_DBLP` |     | 单个采样点的为64位浮点         |
+| 12   | `AV_SAMPLE_FMT_S64`  |     | 单个采样点的为64位整型         |
+| 13   | `AV_SAMPLE_FMT_S64P` |     | 单个采样点的为64位整型         |
+| 14   | `AV_SAMPLE_FMT_NB`   |     |                                |
 
 **带P和不带P, 关系到了`AVFrame`中的数据排列, 不带P则是`LRLRLRLRLR`, 带P则是`LLLLLRRRRR`排列, 若是双通道带P则意味着, `data[0]`全是L, `data[1]`全是R(注意: 这是采样点, 不是字节), PCM播放器播放的文件需要的是`LRLRLRLRLR`的.**
 
@@ -117,3 +124,66 @@ ffplay -f f32le -ac 1 -ar 48000 pcm_audio.pcm
 
 > * s代表是有符号, u是无符号, f是浮点数 
 > * le是小端, be是大端
+
+### 1.3.6 PCM音频的处理
+
+#### 1.3.6.1 分离双声道PCM音频数据左右声道的数据
+
+按照声道的`LRLRLRLR`的PCM音频数据可以通过将他们交叉的读出来的方式来分离左右声道的数据.
+
+```cpp
+/**
+ * 分离左右声道的数据
+ * */
+void f32le_convert_to_fltp(float *f32le, float *fltp, int nb_samples) {
+    float *fltp_l = fltp;   // 左通道
+    float *fltp_r = fltp + nb_samples;   // 右通道
+    for(int i = 0; i < nb_samples; i++) {
+        fltp_l[i] = f32le[i*2];     // 0 1   - 2 3
+        fltp_r[i] = f32le[i*2+1];   // 可以尝试注释左声道或者右声道听听声音
+    }
+}
+```
+
+## 2 AAC
+
+### 2.1 说明
+
+`AAC`(Advanced Aydui Coding), 即高级音频编码. 基于`MPEG-2`的音频编码技术.
+
+`AAC`是一种专为声音数据设计的文件压缩格式, 与`MP3`不同, 它采用了全新的算法进行编码, 更加高效, 具有更高的"性价比", 利用`AAC`格式, 可使人感觉声音质量没有明显降低的前提下, 更加小巧.
+
+**优点:** 相较于`MP3`, `AAC`格式的音质更佳, 文件更小.
+
+**不足:** `AAC`属于<u>有损压缩</u>的格式, 与无损格式相比音质存在"本质上"的差距.
+
+#### 2.1.1 特点
+
+1. 提升的压缩率: 可以以更小的文件大小获得更高的音质.
+2. 支持多声道: 可提供最多48个全音域声道.
+3. 更高的解析度: 最高支持96KHz的采样频率.
+4. 提升的解码效率: 解码播放所占的资源更少.
+
+#### 2.1.2 特性
+
+**与`MP3`的关键不同**
+
+`AAC`是在`MP3`基础上开发出来的, 所以两者的编码系统有一些相同之处. 但是对比一下两者的编码流程图, 会发现`AAC`的编码工序更加复杂.
+
+1. 滤波器组(Filter bank): 主要完成信号的时频转换. 从而得到频域的频谱系数.
+2. 时域噪音修整(Temporal Noise Shaping, TNS): 这项神奇的技术可以通过在频率域上的预测, 来修整时域上的量化噪声分布, 在一些特殊的语音和剧烈变化信号的量化上, TNS技术对音质的提高贡献巨大.
+3. 预测(Prediction): 对音频信号进行预测可以减少重复冗余信号的处理, 提高效率.
+4. 量化(Quantization): `AAC`的量化过程是使用两个巢状循环进行反复运算, 通过对比量化分析的良好控制, 比特率能够被更高效的利用.
+5. 比特流格式(Bit-strem format): 在`AAC`中, 信息的传输都要经过熵编码, 以保证冗余尽可能少. 此外`AAC`拥有一个弹性的比特流结构, 使得编码效率进一步提高.
+6. 长时期预测(Long Term Prediction, LTP): 这是一个`MPEG-4 AAC`中才有的工具, 它用来减少两个连续编码之间的信号冗余, 对于处理低码率的语音非常有效.
+7. 知觉噪音代替(Perceptual Noise Substitution, PNS): 这也是`MPEG-4 AAC`中才有的工具, 当编码器发现类似噪音的信号时, 并不对其进行量化, 而是作个标记就忽略过去, 当解码时, 再还原出来, 这样就提高了效率.
+
+### 2.2 帧格式
+
+`AAC`音频格式有:
+* `ADIF`(Audio Data Interchage format), 音频数据交换格式：只有一个统一的头，必须得到所有数据后解码，适用于本地文件.
+* `ADTS`(Audio Data Transport Stream), 音视数据传输流：每一帧都有头信息，任意帧解码，适用于传输流.
+
+<div align=center>
+    <img src="./images/001-02.webp" />
+</div>
