--- a/音视频学习/001.音频.md
+++ b/音视频学习/001.音频.md
@@ -184,6 +184,10 @@ void f32le_convert_to_fltp(float *f32le, float *fltp, int nb_samples) {
 * `ADIF`(Audio Data Interchage format), 音频数据交换格式：只有一个统一的头，必须得到所有数据后解码，适用于本地文件.
 * `ADTS`(Audio Data Transport Stream), 音视数据传输流：每一帧都有头信息，任意帧解码，适用于传输流.
 
+下面主要介绍`ADTS`.
+
+`ADTS`的组成单元是`ADTS Frame`.
+
 <div align=center>
     <img src="./images/001-02.webp" />
 </div>
