--- a/音视频学习/001.音频.md
+++ b/音视频学习/001.音频.md
@@ -195,6 +195,11 @@ void f32le_convert_to_fltp(float *f32le, float *fltp, int nb_samples) {
 
 <div align=center>
     <img src="./images/001-02.webp" />
+    <h6>ADTS帧格式</h6>
 </div>
+
+- `ADTS Frame`由`ADTS Header`和`AAC ES`组成.
+- `ADTS Header`包含采样率, 声道数, 帧长度的信息.
+- `ADTS`头信息的长度是7个字节或9个字节(由CRC的情况)
 
 ### 2.3 test
