--- a/音视频学习/001.音频.md
+++ b/音视频学习/001.音频.md
@@ -19,7 +19,6 @@
       - [2.1.1 特点](#211-特点)
       - [2.1.2 特性](#212-特性)
     - [2.2 帧格式](#22-帧格式)
-    - [2.3 test](#23-test)
 
 ## 1 PCM(脉冲编码调制)
 
@@ -56,10 +55,10 @@
 
 ### 1.3.2 FFmpeg中提供的样本格式
 
-| 序号 | 枚举               | 值  | 描述                           |
-| ---- | ------------------ | --- | ------------------------------ |
+| 序号 | 枚举                 | 值  | 描述                           |
+| ---- | -------------------- | --- | ------------------------------ |
 | 1    | `AV_SAMPLE_FMT_NONE` | -1  | 无                             |
-| 2    | `AV_SAMPLE_FMT_U8`  |     | 单个采样点的为8位无符号整型    |
+| 2    | `AV_SAMPLE_FMT_U8`   |     | 单个采样点的为8位无符号整型    |
 | 3    | `AV_SAMPLE_FMT_S16`  |     | 单个采样点的为16位整型         |
 | 4    | `AV_SAMPLE_FMT_S32`  |     | 单个采样点的为32位整型         |
 | 5    | `AV_SAMPLE_FMT_FLT`  |     | 单个采样点的为32位浮点数       |
@@ -202,4 +201,43 @@ void f32le_convert_to_fltp(float *f32le, float *fltp, int nb_samples) {
 - `ADTS Header`包含采样率, 声道数, 帧长度的信息.
 - `ADTS`头信息的长度是7个字节或9个字节(由CRC的情况)
 
-### 2.3 test
+`ADTS Header`包含采样率, 声道数, 帧长度的信息.
+
+- `adts_fixed_header`: 每一帧的内容时不变的.
+- `adts_variable_header`: 每一帧的内容是存在变化的.
+- `crc`: 16bits, `protection_absenet`字段为0时存在
+
+`adts_fixed_header`:
+
+| 字段                       | 比特数 | 说明                                                    |
+| -------------------------- | ------ | ------------------------------------------------------- |
+| `syncword`                 | 12     | 所有位必须为1, 即0xFFF                                  |
+| `ID`                       | 1      | 0代表`MPEG-4`, 1代表`MPEG-2`                            |
+| `layer`                    | 2      | 所有位必须为0                                           |
+| `protection_absent`        | 1      | 1代表没有`crc`, 0代表有                                 |
+| `profile`                  | 2      | 配置级别                                                |
+| `sampling_frequency_index` | 4      | 标识使用的采样率(见下表35)                              |
+| `private_bit`              | 1      | see ISO/IEC 11172-3, subclause 2.4.2.3 (Table 8)        |
+| `channel_configuration`    | 3      | 取值为0时, 通过`inband`的PCE设置`channel_configuration` |
+| `original/copy`            | 1      | 编码时设置为0, 解码时忽略                               |
+| `home`                     | 1      | 编码时设置为0, 解码时忽略                               |
+
+在`MPEG-2` `AAC`中定义了3种`profile`:
+
+* MPEG-2 AAC Main
+* MEPG-2 AAC LC(Low Complexity)
+* MPEG-2 AAC SSR(Scalable Sampling Rate)
+
+在`MPEG-4` `AAC`中定义了6种`profile`:
+
+* MPEG-4 AAC Main
+* MPEG-4 AAC LC (Low Complexity)
+* MPEG-4 AAC SSR (Scalable Sample Rate)
+* MPEG-4 AAC LTP (Long Term Predicition)
+* MPEG-4 AAC LD (Low Delay)
+* MPEG-4 AAC HE (High Efficiency) AACPlusV1/V2(3GPP)
+
+<div align=center>
+    <img src="./images/001-03.webp" />
+    <h6>表35</h6>
+</div>
